added vimeo badge to home. moved blog off home to journal

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,8 +38,9 @@
 				<li><a href="http://artifactuals.posterous.com" target="_blank">artifactuals.posterous.com</a></li>
 				<li><a href="http://codedoval.posterous.com" target="_blank">codedoval.posterous.com</a></li>
 			</ul>
-			<ul class="footer-block">
-			</ul>
+			<!-- <ul class="footer-block">
+				<li></li>
+			</ul> -->
 			<div class="footer-block right text-right">
 				<span>powered by <a href="http://github.com/mojombo/jekyll" target="_blank">jekyll </a></span>			
 			</div>
