--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -2,6 +2,7 @@
 	<ul>
 		<li><a href="{{ site.url }}/">Home</a></li>
 		<li><a href="{{ site.url }}/about/">About</a></li>
+		<li><a href="{{ site.url }}/journal/">Journal</a></li>
 		<li><a href="{{ site.url }}/glossary/">Glossary</a></li>
 	</ul>
 </div> <!-- navigation -->
